config("myconfig") {
    include_dirs = [
        "./include",
    ]
    lib_dirs = ["./lib"]
    cflags = [ "-Wall" ]
    cflags_cc = [ "-std=c++2a" ]
}

executable("http_tunnel_server") {
    configs += [ ":myconfig" ]
    configs -= [ "//build/config:c++11" ]

    sources = [
        "./server/main.cpp",
        "./server/http_tunnel_server.h",
        "./server/http_tunnel_server.cpp",
        "./server/http_tunnel_session.h",
        "./server/http_tunnel_session.cpp",
        "./server/https_tunnel_session.h",
        "./server/https_tunnel_session.cpp",
        "./server/kconfig.cpp",
        "./server/kconfig.h",
        "./server/logger.cpp",
        "./server/logger.h",
        "./server/tunnel_session.cpp",
        "./server/tunnel_session.h",
        ]
    libs = ["boost_log_setup", "boost_log", "boost_thread",  "boost_date_time", "boost_filesystem",
            "boost_program_options", "boost_regex", "pthread", "ssl", "crypto"]
}

executable("http_tunnel_client") {
    configs += [ ":myconfig" ]
    configs -= [ "//build/config:c++11" ]

    sources = [
        "./client/main_http.cpp",
        "./client/http_tunnel_client.h",
        "./client/http_tunnel_client.cpp",
        "./client/pub.cpp",
        ]
    libs = ["pthread"]
}

executable("https_tunnel_client") {
    configs += [ ":myconfig" ]
    configs -= [ "//build/config:c++11" ]

    sources = [
        "./client/main_https.cpp",
        "./client/https_tunnel_client.h",
        "./client/https_tunnel_client.cpp",
        "./client/pub.cpp",
        ]
    libs = ["pthread", "ssl", "crypto"]
}

executable("test_server") {
    configs += [ ":myconfig" ]
    configs -= [ "//build/config:c++11" ]

    sources = [
        "./client/main_test_server.cpp",
        "./client/http_api_server.h",
        "./client/http_api_server.cpp",
        "./client/pub.cpp",
        ]
    libs = ["pthread"]
}



